--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>deNotRK</title>
+  <title>jabaCoder</title>
   <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="style.css">
-  <link rel="shortcut icon" type="image/png" href="https://static.wikia.nocookie.net/fredj/images/2/22/Fredj_Grief.jpg/revision/latest?cb=20200223084406&path-prefix=ru">
+  <link rel="shortcut icon" type="image/png" href="Для_страницы.jpg">
 </head>
 <body>
 
@@ -55,7 +55,7 @@
   <br>
   <p class="email">Email: gameusertop4ikf@gmail.com</p>
   <br>
-  <p class="discord">Discord: deNotRK#3584</p>
+  <p class="discord">Discord: /?jabaCoder.?#3584</p>
 
 
 </div>
